# AionCore

./: AGENTS.md  ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  BRANCH-GOVERNANCE.md  CHANGELOG.md  Cargo.toml  MAINTAINER-CHECKLIST.md  clippy.toml  justfile  release-notes.md  release-please-config.json
.github/workflows/: build-manual.yml  ci.yml  release-please.yml  release.yml  sync-downstream.yml  sync-upstream.yml
crates/aionui-ai-agent/src/: acp_agent.rs  agent_task.rs  aionrs_agent.rs  error.rs  factory.rs  idle_scanner.rs  lib.rs  registry.rs  registry_config_option_tests.rs  registry_tests.rs  runtime_status.rs  task_manager.rs  types.rs
crates/aionui-ai-agent/tests/: acp_error_public.rs  agent_types_integration.rs  cc_switch_integration.rs  factory_provider_integration.rs  prompt_pipeline_integration.rs
crates/aionui-api-types/: Cargo.toml
crates/aionui-api-types/src/: acp.rs  agent_build_extra.rs  auth.rs  conversation.rs  doctor.rs  lib.rs  lifecycle.rs  runtime.rs  skill.rs  system.rs  team.rs  team_mcp.rs
crates/aionui-app/: Cargo.toml
crates/aionui-app/assets/builtin-skills/light-backend-coding/assets/project-scaffold/: .pre-commit-config.yaml  CODE_REVIEW_CHECKLIST.md  README.md  pyproject.toml
crates/aionui-app/assets/builtin-skills/light-backend-coding/assets/project-scaffold/.github/workflows/: ci.yml
crates/aionui-app/assets/builtin-skills/light-backend-coding/assets/project-scaffold/scripts/: boundary_trace.py  debug_instrument.sh
crates/aionui-app/assets/builtin-skills/light-backend-coding/assets/project-scaffold/src/example/: __init__.py  reproducibility.py  stats.py
crates/aionui-app/assets/builtin-skills/light-backend-coding/assets/project-scaffold/tests/: conftest.py  test_reproducibility.py  test_stats.py
crates/aionui-app/assets/builtin-skills/pounding-ozon-assistant/: .env.example  DEVELOPMENT.md  README.md  SKILL.md  pyproject.toml
crates/aionui-app/assets/builtin-skills/pounding-ozon-assistant/contracts/: hybrid-envelope.md  hybrid-responsibilities.md
crates/aionui-app/assets/builtin-skills/pounding-ozon-assistant/scripts/: _const.py  _errors.py  cli.py
crates/aionui-app/assets/builtin-skills/pounding-ozon-assistant/scripts/capabilities/browser_login/: cmd.py  service.py
crates/aionui-app/assets/builtin-skills/pounding-ozon-assistant/scripts/capabilities/browser_probe/: cmd.py  service.py  stealth.py
crates/aionui-app/assets/builtin-skills/pounding-ozon-assistant/scripts/capabilities/configure/: __init__.py  cmd.py
crates/aionui-app/assets/builtin-skills/pounding-ozon-assistant/scripts/capabilities/publish_flow/: __init__.py  cmd.py
crates/aionui-app/assets/builtin-skills/pounding-ozon-assistant/scripts/dev/: release.py
crates/aionui-app/src/: cli.rs  config.rs  lib.rs  main.rs  process_report.rs  services.rs  state_builders.rs
crates/aionui-app/tests/: agent_integration_e2e.rs  (+18 more)
crates/aionui-auth/: Cargo.toml
crates/aionui-conversation/: Cargo.toml
crates/aionui-db/: Cargo.toml
crates/aionui-extension/: Cargo.toml  build.rs
crates/aionui-file/: Cargo.toml
crates/aionui-realtime/: Cargo.toml
crates/aionui-runtime/: Cargo.toml  build.rs
docs/api-spec/: 00-module-index.md  01-common-types.md  02-database.md
scripts/: apply-branding.sh  check-branding.sh  check-migration-immutability.sh  check-migration-immutability.test.sh  test-apply-branding.sh
(+993 files in other folders)
