[project]
name = "pounding-ozon-hybrid"
version = "0.5.0"
description = "1688→Ozon cloud pipeline skill — local selection + n8n cloud execution"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31,<3",
  "sentry-sdk>=2.8,<3",
]

[project.optional-dependencies]
browser = ["playwright>=1.40"]
pricing = ["openpyxl>=3.1"]

[project.scripts]
pounding-ozon = "scripts.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pip]
# 国内用户优先使用阿里云镜像，海外用户用默认 PyPI
index-url = "https://mirrors.aliyun.com/pypi/simple/"
extra-index-url = [
    "https://pypi.tuna.tsinghua.edu.cn/simple/",
    "https://pypi.org/simple/",
]
