# 复制即用的项目骨架。版本号于 2026-06 经 PyPI / GitHub API 实测存在。
# 改 <project-name> / 作者信息后即可 `uv sync && uv run pytest`。
[project]
name = "example-project"
version = "0.1.0"
description = "Backend project scaffold (light-backend-coding)"
requires-python = ">=3.11"
dependencies = [
    # 运行期依赖写这里，例如：
    # "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",       # 2026-06 PyPI 最新 9.0.3
    "pytest-cov>=7.0",
    "ruff>=0.15",        # 2026-06 PyPI 最新 0.15.16
    "pre-commit>=4.0",
    "mypy>=1.13",        # 静态类型检查；库代码建议 --strict（见 [tool.mypy]）
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 项目名(example-project)与包目录(src/example)不同名，须显式告诉 hatchling
# 要打包哪个目录，否则 `pip install -e .` / `uv sync` 会报无法确定 wheel 内容。
[tool.hatch.build.targets.wheel]
packages = ["src/example"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# 默认 = ["E4","E7","E9","F"]；这里叠加 bugbear(B) 与 isort(I)
extend-select = ["B", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x"
markers = [
    "slow: 标记慢测试 (用 `-m 'not slow'` 跳过)",
]

# 静态类型检查档位（按项目性质选，二选一即可）：
#  - 应用/科研代码起步：保持下方基础档（检出明显类型错，不强制全注解）。
#  - 库代码 / 对外 API：解开 strict=true 一行，要求全量类型注解（最严）。
# CI 里加一步 `mypy src`（见 README）。pyright 用户可改用 basic/strict 档，
# 在 pyrightconfig.json 设 "typeCheckingMode": "basic"（起步）或 "strict"（库）。
[tool.mypy]
python_version = "3.11"
files = ["src"]
# strict = true            # 库代码放开这行（等价于一组严格开关全开）
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true   # 第三方无 stub 时不报错；库代码可收紧为按模块 override

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true             # 测试代码不强制类型，避免 fixture 噪声
